--- a/package.json
+++ b/package.json
@@ -13,17 +13,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "google-map-react": "^1.1.5",
     "next": "^9.1.4",
     "react": "^16.12.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/google-map-react": "^1.1.3",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
