--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "contentful": "^7.10.0",
     "google-map-react": "^1.1.5",
+    "moment": "^2.24.0",
     "next": "^9.1.4",
     "react": "^16.12.0",
     "react-copy-to-clipboard": "^5.0.2",
