--- a/package.json
+++ b/package.json
@@ -19,15 +19,22 @@
     "next": "^9.1.4",
     "react": "^16.12.0",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "rebass": "^4.0.7",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
+    "@contentful/rich-text-html-renderer": "^13.4.0",
     "@types/google-map-react": "^1.1.3",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-dom": "^16.9.4",
+    "@types/rebass": "^4.0.3",
+    "@types/styled-components": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
     "@typescript-eslint/parser": "^2.9.0",
+    "contentful-management": "^5.11.3",
     "dotenv": "^8.2.0",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
