--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@typescript-eslint/parser": "^2.9.0",
     "contentful-management": "^5.11.3",
     "dotenv": "^8.2.0",
+    "emotion-theming": "^10.0.19",
     "eslint": "^6.7.1",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.16.0",
     "eslint-plugin-react-hooks": "^2.3.0",
+    "html-to-react": "^1.4.2",
     "prettier": "^1.19.1",
     "typescript": "^3.7.2"
   }
