--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react": "^16.9.13",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dom": "^16.9.4",
+    "@types/react-responsive": "^8.0.2",
     "@types/rebass": "^4.0.3",
     "@types/styled-components": "^4.4.0",
     "@typescript-eslint/eslint-plugin": "^2.9.0",
@@ -44,6 +45,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "html-to-react": "^1.4.2",
     "prettier": "^1.19.1",
+    "react-responsive": "^8.0.1",
     "typescript": "^3.7.2"
   }
 }
