--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.12.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "rebass": "^4.0.7",
     "styled-components": "^4.4.1"
   },
